# SuperSeriousBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  botstats.db  config.yaml  db.py  deploy.sh  deploy_rsa.enc  docker-compose.yaml  example-compose.yaml  main.py  pydub_patch.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  stats.db  steam_id.db
.github/: dependabot.yml  release.yml
.github/workflows/: codeql-analysis.yml  codesee-arch-diagram.yml  docker.yml  publish-image.yml  python.yml  release.yml  semgrep.yml
api/: __init__.py  age.py  album.py  animals.py  audio.py  brit.py  calc.py  caption.py  countdown.py  covid.py  csgo.py  currency.py  define.py  dice.py  gif.py  goodreads.py  hltb.py  insult.py  jogi.py  joke.py  meme.py  person.py  pfp.py  pic.py  ping.py  pokemon.py  qr.py  randdit.py  response.py  search.py  sed.py  seinfeld.py  setw.py  shiba.py  spurdo.py  stats.db  stats.py  steamstats.py  subscribe.py  time.py  (+9 more)
chat_management/: __init__.py  ban.py  kick.py  links.py  seen.py  stats.py
commands/: __init__.py  animals.py  book.py  calc.py  define.py  dl.py  meme.py  pic.py  ping.py  randdit.py  reddit_comment.py  sed.py  subscribe.py  translate.py  tv.py  vision.py  weather.py
config/: logger.py  options.py
configuration/: .env.example  __init__.py  env_file  example.env  example_config.yaml
debug/: __init__.py  botstats.py
dev/: __init__.py  botstats.py  groups.py  reddit_stats.py  users.py
inline/: __init__.py  show_notifications.py
internal/: __init__.py  string_builder.py
links/: __init__.py  dl.py  link_handler.py  reddit.py  reddit_comment.py  youtube.py
management/: __init__.py  botstats.py  stats.py
migrations/: 20240624131537_init.py  20240624132855_video_history.py  20240627091908_steam_offer_notify.py  20240719174601_summon_pk.py  20240819123959_tldw.py  20240917172646_user_stats.py  20241209165053_command_blocklist.py  20250127000000_optimize_chat_mentions_indexes.py  20250713000000_quote_recent_history.py  20250801180403_add_ai_model_to_group_settings.py  20251111000000_add_per_command_models.py  20251130000000_add_incoming_mentions_index.py  20251203000000_add_tldr_model.py  20251206000000_replace_redis_with_sqlite.py  20251209000000_optimize_fts_with_chat_id.py  20251218000000_add_ask_thinking.py  20260429000000_add_cron_tasks.py  20260514000000_add_auto_dl.py  20260517000000_clawpatch_integrity_fixes.py  20260607000000_chat_semantic_search.py  20260710000000_user_command_limits_unique.py  20260712000000_add_football_alerts.py  20260712010000_add_chat_message_index.py
scripts/: deploy.sh  deploy_master.sh  deploy_testing.sh
src/: backfill_chat_search_windows.py  chat_search_config.py  football_odds.py  main.py  migrate.py  openrouter_embeddings.py
src/commands/: __init__.py  ai.py  animals.py  ask.py  book.py  calc.py  camera.py  cron.py  cron_service.py  define.py  dl.py  football.py  gif.py  graph.py  habit.py  (+37 more)
stab/: __init__.py  ffprobe.py  stab.py
tests/: test_clawpatch_regressions.py  test_command_regressions.py  test_football.py  test_football_odds.py  test_semantic_search.py  test_song.py
utils/: __init__.py  cleaner.py  link.py  string.py
(+30 files in other folders)
