[project]
name = "superseriousbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp~=3.13.1",
  "aiosqlite>=0.21.0",
  "async-lru>=2.0.5",
  "beautifulsoup4~=4.14.2",
  "caribou>=0.4.1",
  "coloredlogs>=15.0.1",
  "dateparser>=1.2.2",
  "geopy>=2.4.1",
  "googletrans>=4.0.2",
  "gtts>=2.5.4",
  "howlongtobeatpy>=1.0.18",
  "ijson~=3.4.0.post0",
  "litellm[proxy]~=1.78.7",
  "networkx>=3.5",
  "pydantic~=2.12.3",
  "python-dotenv>=1.1.1",
  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.5",
  "redis>=7.0.0",
  "requests~=2.32.5",
  "spurdify>=0.3.0",
  "uwuify>=1.3.1",
  "yt-dlp~=2025.10.22",
]


[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade (auto-fixable)
  "ASYNC", # async best practices
  "B",     # bugbear
  "RUF",   # ruff-specific
]
ignore = [
  "E501", # line length (handled by formatter/line-length)
]
