[project]
name = "superseriousbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp~=3.13.2",
  "aiosqlite~=0.22.0",
  "async-lru>=2.0.5",
  "caribou>=0.4.1",
  "coloredlogs>=15.0.1",
  "dateparser>=1.2.2",
  "geopy>=2.4.1",
  "googletrans>=4.0.2",
  "gtts>=2.5.4",
  "howlongtobeatpy~=1.0.19",
  "ijson~=3.4.0.post0",
  "pydantic~=2.12.5",
  "python-dotenv~=1.2.1",
  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.5",
  "spurdify>=0.3.0",
  "uwuify>=1.3.1",
  "telegramify-markdown~=0.5.3",
]


[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade (auto-fixable)
  "ASYNC", # async best practices
  "B",     # bugbear
  "RUF",   # ruff-specific
]
ignore = [
  "E501", # line length (handled by formatter/line-length)
]

[dependency-groups]
dev = [
    "ty>=0.0.2",
]

[tool.ty.environment]
python-version = "3.13"
root = ["src"]

[tool.ty.src]
include = ["src"]
