[project]
name = "superseriousbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp~=3.13.3",
  "aiosqlite~=0.22.1",
  "async-lru~=2.2.0",
  "caribou~=0.6.0",
  "coloredlogs>=15.0.1",
  "dateparser~=1.3.0",
  "geopy>=2.4.1",
  "googletrans>=4.0.2",
  "gtts>=2.5.4",
  "howlongtobeatpy~=1.0.20",
  "ijson~=3.5.0",
  "python-dotenv~=1.2.2",
  "python-telegram-bot[job-queue,rate-limiter,webhooks]~=22.7",
  "spurdify>=0.3.0",
  "uwuify>=1.3.1",
  "telegramify-markdown~=1.1.0",
]


[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade (auto-fixable)
  "ASYNC", # async best practices
  "B",     # bugbear
  "RUF",   # ruff-specific
]
ignore = [
  "E501", # line length (handled by formatter/line-length)
]

[dependency-groups]
dev = [
    "ty>=0.0.23",
]

[tool.ty.environment]
python-version = "3.13"
root = ["src"]

[tool.ty.src]
include = ["src"]
